# food-tracker-bot

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 914f4a260d05_.py
app/: __main__.py
app/config/: config.py
app/handlers/: advice.py  food.py  general.py  handlers.py  profile.py  progress.py  water.py  workout.py
app/middlewares/: __init__.py  middlewares.py
app/states/: states.py
app/utils/: calculate.py  gpt.py
config/: config.py
database/: db_commands.py
handlers/: handlers.py
models/: user.py
scripts/: run-bot.sh
states/: states.py
